# on-boarding-phospholipids-openmm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-23-openmm-runtime-bootstrap-design.md
mains/: analyze_size.py  run_case.py  run_membrane_single_step.py  run_membrane_sweep.py  run_single_step.py  run_solution_single_step.py  run_solution_sweep.py  run_sweep.py
src/charmm_gui_md/: __init__.py
src/charmm_gui_md/membrane/: __init__.py  pipeline.py  profile.py
src/charmm_gui_md/shared/: __init__.py  artifacts.py  cli.py  profile.py  runtime.py
src/charmm_gui_md/solution/: __init__.py  pipeline.py  profile.py
src/membrane_openmm/: __init__.py  artifacts.py  charmm_gui.py  pipeline.py  protocol.py  simulation.py  workflow.py
src/membrane_openmm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/protein_membrane_md/: _runtime.py  artifacts.py  pipeline.py
src/protein_membrane_md/inputs/: __init__.py  base.py  charmm_gui.py  charmm_gui_files.py  openmm_native_files.py
src/protein_membrane_md/protocols/: __init__.py  schedule.py  stage.py
src/protein_membrane_md/simulation/: __init__.py  factory.py  initialization.py  outputs.py  reporters.py  system_modifiers.py
tests/: README.md  test_package_api.py  test_runtime_bootstrap.py  test_simulation_platform_fallback.py  test_stage_runner.py
tests/inputs/: test_openmm_native_files.py
tests/protocols/: __init__.py  test_stage.py
tests/runtime/: __init__.py  test_bootstrap.py  test_main_script_paths.py
tests/simulation/: __init__.py  test_initialization.py  test_openmm_native_system_details.py  test_outputs.py  test_platform_fallback.py  test_reporters.py
tests/workflows/: __init__.py  test_pipeline.py  test_restart_resolver.py  test_runner_api.py
(+17 files in other folders)
