[project]
name = "membrane-openmm"
version = "0.1.0"
description = "Python/OpenMM scaffold for CHARMM-GUI membrane size-effect runs"
requires-python = ">=3.12.10"
dependencies = [
    "openmm==8.5.0",
    "mypy>=1.11",
    "pydantic==2.12.5",
    "ruff>=0.15.10",
]

[project.optional-dependencies]
amd = [
    "openmm-hip-7==8.5.0",
]
nvidia = [
    "openmm-cuda-12==8.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
